added css & staticfiles template

--- a/apps/polls/templates/polls/base.html
+++ b/apps/polls/templates/polls/base.html
@@ -2,6 +2,8 @@
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}">
 <head>
   {# <title>{% block title %}{% endblock %}</title>#}
+  {% load static from staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 </head>
 
 <body>
