--- a/apps/polls/templates/polls/index.html
+++ b/apps/polls/templates/polls/index.html
@@ -6,6 +6,7 @@
         <ul>
         {% for question in latest_question_list %}
             <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+            <li><a href="{{ question.get_absolute_url }}">{{ question.question_text }} - This URL is overrided with pub_date at the end</a></li>
         {% endfor %}
         </ul>
     {% else %}
