wraps other html inside base template

--- a/apps/polls/templates/polls/base.html
+++ b/apps/polls/templates/polls/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE|default:"en-us" }}">
 <head>
-  {# <title>{% block title %}{% endblock %}</title>#}
+  <title>{% block title %}{% endblock %}</title>
   {% load static from staticfiles %}
   <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 </head>
