--- a/apps/polls/templates/polls/results.html
+++ b/apps/polls/templates/polls/results.html
@@ -1,3 +1,7 @@
+{% extends 'polls/base.html' %}
+
+{% block content %}
+
 <h3>{{ question.question_text }}</h1>
 
 <ul>
@@ -7,3 +11,5 @@
 </ul>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+
+{% endblock %}
