integrate Django Channels (ASGI) result in Celery tasks will send msg to browser console on task started & finished

--- a/apps/polls/templates/polls/base.html
+++ b/apps/polls/templates/polls/base.html
@@ -3,6 +3,7 @@
 <head>
   <title>{% block title %}{% endblock %}</title>
   {% load static from staticfiles %}
+  <script type="text/javascript" src="{% static 'polls/index.js' %}"></script>
   <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 </head>
 
